test/tests/compiler/17_supporting_dynamic_memory_allocation/invalid_types/incomplete_types/sub_void_pointer.plx
#  no pointer arithmetic with pointers to incomplete type
#  (GCC/Clang allow this as an extension)

pub fn main(none) i32 {
    y: i32;
    x: *any = @y
    null: *any = 0
    return x - null
}
